# agent-chat

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  error.rs  format.rs  main.rs  names.rs  ui.rs
src/commands/: br.rs  br_claim.rs  br_complete.rs  check_lock.rs  check_messages.rs  focus.rs  init.rs  init_br.rs  init_codex.rs  lock.rs  mod.rs  read.rs  register.rs  say.rs  status.rs
src/hooks/: agents_md_codex.rs  claude_md.rs  claude_md_br.rs  installer.rs  mod.rs  stdin.rs
src/storage/: config.rs  cursor.rs  focus.rs  identity.rs  lockfile.rs  log.rs  mod.rs  paths.rs  session.rs
tests/: br_commands_test.rs  check_messages_test.rs  concurrency_test.rs  focus_test.rs  hooks_test.rs  init_br_test.rs  init_codex_test.rs  init_test.rs  lock_test.rs  register_test.rs  say_read_test.rs  status_test.rs
